--- a/.env
+++ b/.env
@@ -6,3 +6,10 @@ MYSQL_DATABASE=mbanking
 MYSQL_PASS=Resyaa21
 
 MYSQL_RAILWAY=mysql://root:qFGk998vGReqxZ4Z8tsC@containers-us-west-81.railway.app:7310/railway
+
+
+MYSQL_PORT_PRODUCTION=7310
+MYSQL_HOST_PRODUCTION=containers-us-west-81.railway.app
+MYSQL_USER_PRODUCTION=root
+MYSQL_DATABASE_PRODUCTION=railway
+MYSQL_PASS_PRODUCTION=qFGk998vGReqxZ4Z8tsC
